--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Hallo Heimur</h1>
-    <a href="about.html">um Jonas</a>
+    <a href="about.html">um Jonas og ásdísi</a>
   </body>
 </html>
