--- a/form.html
+++ b/form.html
@@ -5,6 +5,7 @@
   <title>
     Form
   </title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
 </head>
 <header>
 
