--- a/form.html
+++ b/form.html
@@ -37,13 +37,29 @@
     <input type="text" id="text" required><br>
     <label for="text">Kortanúmer:</label><br>
     <input type="text" id="text" required placeholder="5999-9999-9999-9999"><br>
-    <label for="text">Mán</label><br>
-      <input type="month">
+    <label for="text">Mán</label>
+    <select>
+      <option value="1">01</option>
+      <option value="2">02</option>
+      <option value="3">03</option>
+      <option value="4">04</option>
+      <option value="5">05</option>
+      <option value="6">06</option>
+      <option value="7">07</option>
+      <option value="8">08</option>
+      <option value="9">09</option>
+      <option value="10">10</option>
+      <option value="11">11</option>
+      <option value="12">12</option>
+    </select>
+    <label for="text">Ár</label>
+    <select>
+      <option value="2017">1</option>
+      <option value="2018">2</option>
+      <option value="2019">3</option>
+      <option value="2020">4</option>
+    </select><br>
   </form>
 </body>
 <footer>
 </footer>
-    <!--
-    <form class="" action="index.html" method="post"><!what?>
-      Form
-    </form>-->
