--- a/form.html
+++ b/form.html
@@ -6,6 +6,7 @@
     Form
   </title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <header>
 
