--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="stylesheet" href="grid.css">
   </head>
   <body>
-    <header>
+    <div class="header">
       <div class="content">
         <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
         <h1 class="heading heading--one">Fooþjónustan</h2>
         <button class="button">Kaupa</button>
       </div>
-    </header>
+    </div>
     <main>
       <section>
         <div class="col-6">
