--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <section>
         <div class="col-6">
-          <img src="image.jpg" class="img" alt="">
+          <img src="img/image.jpg" class="img" alt="">
         </div>
         <div class="col-6">
           <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
@@ -40,7 +40,7 @@
 
       <section>
         <div class="col-4">
-          <img src="profile1.jpg" class="profile" alt="">
+          <img src="img/profile1.jpg" class="profile" alt="">
           <blockquote class="quote">
             „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
           </blockquote>
@@ -49,7 +49,7 @@
         </div>
 
         <div class="col-4">
-          <img src="profile2.jpg" class="profile" alt="">
+          <img src="img/profile2.jpg" class="profile" alt="">
           <blockquote class="quote">
             „Vá, þetta breytir öllu!“
           </blockquote>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-4">
-          <img src="profile3.jpg" class="profile" alt="">
+          <img src="img/profile3.jpg" class="profile" alt="">
           <blockquote class="quote">
             „A+++, mun aldrei hætta í áskrift“
           </blockquote>
