--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
     <!---font-family: 'Open Sans', sans-serif; font-family: 'Roboto Slab', serif;-->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleguide.css">
     <link rel="stylesheet" href="grid.css">
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="content">
         <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
         <h1 class="heading heading--one">Fooþjónustan</h2>
