header og footer

--- a/form.html
+++ b/form.html
@@ -9,7 +9,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <header>
-
+  <form class="button" action="index.html">
+    <input type="submit" value="Foobar">
+  </form>
+  <form class="button" action="um.html">
+    <input type="submit" value="Um">
+  </form>
+  <form class="button" action="form.html">
+    <input type="submit" value="Kaupa">
+  </form>
 </header>
 <body>
   <form>
@@ -63,4 +71,9 @@
   </form>
 </body>
 <footer>
+  <p>Foothjonustan</p>
+  <p>123-4567</p>
+  <p>Opid 12-13 alla daga</p>
+  <p>Bargata 1</p>
+  <p>900 Foobar</p>
 </footer>
