--- a/um.html
+++ b/um.html
@@ -9,6 +9,15 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <header>
+  <form class="button" action="index.html">
+    <input type="submit" value="Foobar">
+  </form>
+  <form class="button" action="um.html">
+    <input type="submit" value="Um">
+  </form>
+  <form class="button" action="form.html">
+    <input type="submit" value="Kaupa">
+  </form>
 </header>
 <body>
   <h1>Um Fooþjónustuna</h1>
@@ -24,3 +33,10 @@
   <p>Aenean in purus vel leo pellentesque lacinia non ut magna. Sed eleifend tristique mollis. Nam purus nisl, elementum eget vestibulum at, volutpat vitae diam. Proin vitae enim in elit condimentum fringilla. Quisque ullamcorper enim vel feugiat facilisis. Fusce commodo hendrerit ex. Donec posuere, enim non vehicula placerat, metus enim blandit nisi, eu rhoncus nisl mi et justo. Curabitur ullamcorper nec magna eu dictum. Maecenas tincidunt sem odio, nec blandit dolor ultricies eu. Donec viverra ipsum lobortis quam tincidunt lacinia. Aenean consectetur ut enim non lacinia. Proin sed interdum orci, et condimentum purus. Suspendisse vel erat sagittis, lobortis tortor vitae, pellentesque diam. Aenean fringilla elit id mi tincidunt tempus.
   </p>
 </body>
+<footer>
+  <p>Foothjonustan</p>
+  <p>123-4567</p>
+  <p>Opid 12-13 alla daga</p>
+  <p>Bargata 1</p>
+  <p>900 Foobar</p>
+</footer>
