--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="utf-8">
     <title>Forsíða</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
+    <!---font-family: 'Open Sans', sans-serif; font-family: 'Roboto Slab', serif;-->
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styleguide.css">
     <link rel="stylesheet" href="grid.css">
   </head>
   <body>
-    <header class="header">
-      <div class="content">
-        <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
-        <h1 class="heading heading--one">Fooþjónustan</h2>
-        <button class="button">Kaupa</button>
-      </div>
+    <header>
+      <form class="button" action="index.html">
+        <input type="submit" value="Foobar">
+      </form>
+      <form class="button" action="um.html">
+        <input type="submit" value="Um">
+      </form>
+      <form class="button" action="form.html">
+        <input type="submit" value="Kaupa">
+      </form>
     </header>
+    <div class="content">
+      <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
+      <h2 class="heading heading--one">Fooþjónustan</h2>
+    </div>
     <main>
       <section>
         <div class="col-6">
-          <img src="img/image.jpg" class="img" alt="">
+          <img src="image.jpg" class="img" alt="">
         </div>
         <div class="col-6">
           <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
@@ -40,7 +48,7 @@
 
       <section>
         <div class="col-4">
-          <img src="img/profile1.jpg" class="profile" alt="">
+          <img src="profile1.jpg" class="profile" alt="">
           <blockquote class="quote">
             „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
           </blockquote>
@@ -49,7 +57,7 @@
         </div>
 
         <div class="col-4">
-          <img src="img/profile2.jpg" class="profile" alt="">
+          <img src="profile2.jpg" class="profile" alt="">
           <blockquote class="quote">
             „Vá, þetta breytir öllu!“
           </blockquote>
@@ -58,7 +66,7 @@
         </div>
 
         <div class="col-4">
-          <img src="img/profile3.jpg" class="profile" alt="">
+          <img src="profile3.jpg" class="profile" alt="">
           <blockquote class="quote">
             „A+++, mun aldrei hætta í áskrift“
           </blockquote>
@@ -69,8 +77,17 @@
 
       <section>
         <h3 class="heading heading--three">Eftir hverju ert þú að bíða?</h3>
-        <button class="button">Kaupa</button>
+        <form class="button" action="form.html">
+          <input type="submit" value="Kaupa">
+        </form>
       </section>
     </main>
   </body>
+  <footer>
+    <p>Foothjonustan</p>
+    <p>123-4567</p>
+    <p>Opid 12-13 alla daga</p>
+    <p>Bargata 1</p>
+    <p>900 Foobar</p>
+  </footer>
 </html>
