--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <title>Forsíða</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
-    <!---font-family: 'Open Sans', sans-serif; font-family: 'Roboto Slab', serif;-->
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styleguide.css">
     <link rel="stylesheet" href="grid.css">
   </head>
   <body>
-    <header>
+    <header class="header">
       <form class="button" action="index.html">
         <input type="submit" value="Foobar">
       </form>
@@ -19,15 +19,15 @@
       <form class="button" action="form.html">
         <input type="submit" value="Kaupa">
       </form>
-    </header>
     <div class="content">
       <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
       <h2 class="heading heading--one">Fooþjónustan</h2>
     </div>
+    </header>
     <main>
       <section>
         <div class="col-6">
-          <img src="image.jpg" class="img" alt="">
+          <img src="img/image.jpg" class="img" alt="">
         </div>
         <div class="col-6">
           <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
@@ -48,7 +48,7 @@
 
       <section>
         <div class="col-4">
-          <img src="profile1.jpg" class="profile" alt="">
+          <img src="img/profile1.jpg" class="profile" alt="">
           <blockquote class="quote">
             „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
           </blockquote>
@@ -57,7 +57,7 @@
         </div>
 
         <div class="col-4">
-          <img src="profile2.jpg" class="profile" alt="">
+          <img src="img/profile2.jpg" class="profile" alt="">
           <blockquote class="quote">
             „Vá, þetta breytir öllu!“
           </blockquote>
@@ -66,7 +66,7 @@
         </div>
 
         <div class="col-4">
-          <img src="profile3.jpg" class="profile" alt="">
+          <img src="img/profile3.jpg" class="profile" alt="">
           <blockquote class="quote">
             „A+++, mun aldrei hætta í áskrift“
           </blockquote>
