--- a/index.html
+++ b/index.html
@@ -22,27 +22,30 @@
     <div class="content">
       <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
       <h2 class="heading heading--one">Fooþjónustan</h2>
+      <button class="button">Kaupa</button>
     </div>
     </header>
     <main>
       <section>
-        <div class="col-6">
-          <img src="img/image.jpg" class="img" alt="">
+        <div class="row">
+          <div class="col col-6">
+            <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
+              <p class="text__p">
+                Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+              </p>
+            <h3 class="heading heading--three">Þægilegt í amstri dagsins</h3>
+              <p class="text__p">
+                Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+              </p>
+            <h3 class="heading heading--three">Nauðsynlegt á hvert heimili</h3>
+              <p class="text__p">
+                Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+              </p>
+            </h3>
+          </div>
         </div>
-        <div class="col-6">
-          <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
-            <p class="text__p">
-              Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
-            </p>
-          <h3 class="heading heading--three">Þægilegt í amstri dagsins</h3>
-            <p class="text__p">
-              Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
-            </p>
-          <h3 class="heading heading--three">Nauðsynlegt á hvert heimili</h3>
-            <p class="text__p">
-              Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
-            </p>
-          </h3>
+        <div class="col col-6">
+          <img src="img/image.jpg" class="img" alt="">
         </div>
       </section>
 
@@ -82,12 +85,13 @@
         </form>
       </section>
     </main>
-  </body>
   <footer>
-    <p>Foothjonustan</p>
+    <p>Fooþjónustan</p>
     <p>123-4567</p>
     <p>Opid 12-13 alla daga</p>
     <p>Bargata 1</p>
     <p>900 Foobar</p>
   </footer>
+  </body>
+</html>
 </html>
