--- a/um.html
+++ b/um.html
@@ -3,16 +3,14 @@
 
 <head>
   <meta charset="utf-8">
-  <div class = "content">
     <title>
       Um
     </title>
-  </div>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<header>
+<header class="header">
   <form class="button" action="index.html">
     <input type="submit" value="Foobar">
   </form>
@@ -22,10 +20,12 @@
   <form class="button" action="form.html">
     <input type="submit" value="Kaupa">
   </form>
+  <div class="content">
+    <h1 class="heading heading--one">Um Fooþjónustuna</h2>
+  </div>
 </header>
 
 <body>
-  <h1 class="heading heading--one">Um Fooþjónustuna</h1>
   <h2 class="heading heading--two">Hvað er Fooþjónustan?</h2>
   <h3 class="text">Í hinum ódauðlegu orðum stofnanda okkar:</h3>
 
