Form.html & form.scss

--- a/form.html
+++ b/form.html
@@ -23,10 +23,10 @@
 </header>
 <body>
   <form class="form">
-    <div class="heading heading--two">
-      <h2>Persónuupplýsingar</h2>
-    </div>
-    <section class="section--one">
+    <section class="section section--one">
+      <div class="heading heading--two">
+        <h2>Persónuupplýsingar</h2>
+      </div>
       <div class="Nafn">
         <label for="text">Nafn:</label><br>
         <input type="text" required><br>
@@ -53,10 +53,10 @@
         <input type="checkbox" checked> Skrá mig á póstlista
       </div>
     </section>
-    <div class="heading heading--two">
-      <h2>Greiðsluupplýsingar</h2>
-    </div>
-    <section class="section--two">
+    <section class="section section--two">
+      <div class="heading heading--two">
+        <h2>Greiðsluupplýsingar</h2>
+      </div>
       <div class="Greida">
         <label for="select">Greiða með:</label><br>
         <select>
@@ -100,6 +100,7 @@
         </select><br>
       </div>
     </section>
+    <button class="button">Pannta</button>
   </form>
 </body>
 <footer>
