--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </form>
     <div class="content">
       <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
-      <h2 class="heading heading--one">Fooþjónustan</h2>
+      <h1 class="heading heading--one">Fooþjónustan</h2>
       <button class="button">Kaupa</button>
     </div>
     </header>
@@ -29,14 +29,17 @@
       <section>
         <div class="row">
           <div class="col col-6">
+            <img src="img/check.svg" alt="">
             <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
               <p class="text__p">
                 Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
               </p>
+            <img src="img/check.svg" alt="">
             <h3 class="heading heading--three">Þægilegt í amstri dagsins</h3>
               <p class="text__p">
                 Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
               </p>
+            <img src="img/check.svg" alt="">
             <h3 class="heading heading--three">Nauðsynlegt á hvert heimili</h3>
               <p class="text__p">
                 Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
@@ -44,8 +47,10 @@
             </h3>
           </div>
         </div>
-        <div class="col col-6">
-          <img src="img/image.jpg" class="img" alt="">
+        <div class="row">
+          <div class="col col-6">
+            <img src="img/image.jpg" class="img" alt="">
+          </div>
         </div>
       </section>
 
@@ -85,13 +90,12 @@
         </form>
       </section>
     </main>
-  <footer>
-    <p>Fooþjónustan</p>
-    <p>123-4567</p>
-    <p>Opid 12-13 alla daga</p>
-    <p>Bargata 1</p>
-    <p>900 Foobar</p>
-  </footer>
+    <footer>
+      <p>Fooþjónustan</p>
+      <p>123-4567</p>
+      <p>Opid 12-13 alla daga</p>
+      <p>Bargata 1</p>
+      <p>900 Foobar</p>
+    </footer>
   </body>
-</html>
 </html>
