--- a/um.html
+++ b/um.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 
-<header class="header">
+<header>
   <form class="button" action="index.html">
     <input type="submit" value="Foobar">
   </form>
