--- a/form.html
+++ b/form.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="is">
+<html class="grid" lang="is">
 <head>
   <meta charset="utf-8">
   <title>
@@ -100,8 +100,8 @@
         </select><br>
       </div>
     </section>
-    <button class="button">Pannta</button>
   </form>
+  <button class="button">Pannta</button>
 </body>
 <footer>
   <p>Foothjonustan</p>
