--- a/um.html
+++ b/um.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="is">
+<html class="grid" lang="is">
 
 <head>
   <meta charset="utf-8">
@@ -8,6 +8,7 @@
     </title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="grid.css">
 </head>
 
 <header>
