--- a/index.html
+++ b/index.html
@@ -56,31 +56,36 @@
 
       <section>
         <div class="cardlist">
-          <div class="col-4">
-            <img src="img/profile1.jpg" class="profile" alt="">
-            <blockquote class="quote">
-              „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
-            </blockquote>
-            <p class="text__p">Anna Jóns</p>
-            <p class="text__p">Áskrifandi í þrjá mánuði</p>
-          </div>
+          <div class="cardlist__row">
 
-          <div class="col-4">
-            <img src="img/profile2.jpg" class="profile" alt="">
-            <blockquote class="quote">
-              „Vá, þetta breytir öllu!“
-            </blockquote>
-            <p class="text__p">Siggi Páls</p>
-            <p class="text__p">Áskrifandi í tvo daga</p>
-          </div>
 
-          <div class="col-4">
-            <img src="img/profile3.jpg" class="profile" alt="">
-            <blockquote class="quote">
-              „A+++, mun aldrei hætta í áskrift“
-            </blockquote>
-            <p class="text__p">Jón Guðrúnarson</p>
-            <p class="text__p">Áskrifandi í ár</p>
+            <div class="cardlist__col">
+              <img src="img/profile1.jpg" class="profile" alt="">
+              <blockquote class="quote">
+                „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
+              </blockquote>
+              <p class="text__p">Anna Jóns</p>
+              <p class="text__p">Áskrifandi í þrjá mánuði</p>
+            </div>
+
+            <div class="cardlist__col">
+              <img src="img/profile2.jpg" class="profile" alt="">
+              <blockquote class="quote">
+                „Vá, þetta breytir öllu!“
+              </blockquote>
+              <p class="text__p">Siggi Páls</p>
+              <p class="text__p">Áskrifandi í tvo daga</p>
+            </div>
+
+            <div class="cardlist__col">
+              <img src="img/profile3.jpg" class="profile" alt="">
+              <blockquote class="quote">
+                „A+++, mun aldrei hætta í áskrift“
+              </blockquote>
+              <p class="text__p">Jón Guðrúnarson</p>
+              <p class="text__p">Áskrifandi í ár</p>
+
+            </div>
           </div>
         </div>
       </section>
