--- a/index.html
+++ b/index.html
@@ -59,32 +59,44 @@
           <div class="cardlist__row">
 
             <div class="cardlist__col">
-              <img src="img/profile1.jpg" class="profile" alt="">
-              <blockquote class="quote">
-                „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
-              </blockquote>
-              <p class="text__p">Anna Jóns</p>
-              <p class="text__p">Áskrifandi í þrjá mánuði</p>
+              <div class="card">
+                <div class="card__content">
+                  <img src="img/profile1.jpg" class="card__img" alt="">
+                  <blockquote class="card__blockquote">
+                    „Ég get engan vegið hugsað mér lífið án þessarar þjónustu!“
+                  </blockquote>
+                  <p class="card__name">Anna Jóns</p>
+                  <p class="card__text">Áskrifandi í þrjá mánuði</p>
+                </div>
+              </div>
             </div>
 
             <div class="cardlist__col">
-              <img src="img/profile2.jpg" class="profile" alt="">
-              <blockquote class="quote">
-                „Vá, þetta breytir öllu!“
-              </blockquote>
-              <p class="text__p">Siggi Páls</p>
-              <p class="text__p">Áskrifandi í tvo daga</p>
+              <div class="card">
+                <div class="card__content">
+                  <img src="img/profile2.jpg" class="card__img" alt="">
+                  <blockquote class="card__blockquote">
+                    „Vá, þetta breytir öllu!“
+                  </blockquote>
+                  <p class="card__name">Siggi Páls</p>
+                  <p class="card__text">Áskrifandi í tvo daga</p>
+                </div>
+              </div>
             </div>
 
             <div class="cardlist__col">
-              <img src="img/profile3.jpg" class="profile" alt="">
-              <blockquote class="quote">
-                „A+++, mun aldrei hætta í áskrift“
-              </blockquote>
-              <p class="text__p">Jón Guðrúnarson</p>
-              <p class="text__p">Áskrifandi í ár</p>
-
+              <div class="card">
+                <div class="card__content">
+                  <img src="img/profile3.jpg" class="card__img" alt="">
+                  <blockquote class="card__blockquote">
+                    „A+++, mun aldrei hætta í áskrift“
+                  </blockquote>
+                  <p class="card__name">Jón Guðrúnarson</p>
+                  <p class="card__text">Áskrifandi í ár</p>
+                </div>
+              </div>
             </div>
+
           </div>
         </div>
       </section>
