--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="grid.css">
   </head>
   <body>
-    <header class="header">
+    <header class="header header--one">
       <form class="button" action="index.html">
         <input type="submit" value="Foobar">
       </form>
@@ -27,27 +27,37 @@
     </header>
     <main>
       <section>
-        <div class="row">
-          <div class="col col-6">
-            <img src="img/check.svg" alt="">
-            <h3 class="heading heading--three">Ódýr og góð þjónusta</h3>
-              <p class="text__p">
+        <div class="list">
+          <div class="list__content">
+            <img src="img/check.svg" class="list__img" alt="">
+            <h3 class="list__heading">Ódýr og góð þjónusta</h3>
+              <p class="list__text">
                 Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
               </p>
-            <img src="img/check.svg" alt="">
-            <h3 class="heading heading--three">Þægilegt í amstri dagsins</h3>
-              <p class="text__p">
-                Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
-              </p>
-            <img src="img/check.svg" alt="">
-            <h3 class="heading heading--three">Nauðsynlegt á hvert heimili</h3>
-              <p class="text__p">
-                Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
-              </p>
-            </h3>
           </div>
         </div>
-        <div class="row">
+
+        <div class="list">
+          <div class="list__content">
+            <img src="img/check.svg" class="list__img" alt="">
+            <h3 class="list__heading">Þægilegt í amstri dagsins</h3>
+              <p class="list__text">
+                Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+              </p>
+          </div>
+        </div>
+
+        <div class="list">
+          <div class="list__content">
+            <img src="img/check.svg" class="list__img" alt="">
+            <h3 class="list__heading">Nauðsynlegt á hvert heimili</h3>
+              <p class="list__text">
+                Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+              </p>
+          </div>
+        </div>
+
+        <div class="list">
           <div class="col col-6">
             <img src="img/image.jpg" class="img" alt="">
           </div>
