--- a/um.html
+++ b/um.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="grid.css">
 </head>
 
-<header class = header header--two>
+<header class = "header header--two">
   <form class="button" action="index.html">
     <input type="submit" value="Foobar">
   </form>
