unnið í heading ofl.

--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styleguide.css">
   <link rel="stylesheet" href="grid.css">
 </head>
-<header>
+<header class = "header header--two">
   <form class="button" action="index.html">
     <input type="submit" value="Foobar">
   </form>
@@ -20,6 +20,9 @@
   <form class="button" action="form.html">
     <input type="submit" value="Kaupa">
   </form>
+  <div class="content">
+    <h1 class="heading heading--one">Kaupa</h2>
+  </div>
 </header>
 <body>
   <form class="form">
