--- a/index.html
+++ b/index.html
@@ -28,38 +28,43 @@
     <main>
       <section>
         <div class="list">
-          <div class="list__content">
-            <img src="img/check.svg" class="list__img" alt="">
-            <h3 class="list__heading">Ódýr og góð þjónusta</h3>
-              <p class="list__text">
-                Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
-              </p>
-          </div>
-        </div>
+          <div class="list__col">
 
-        <div class="list">
-          <div class="list__content">
-            <img src="img/check.svg" class="list__img" alt="">
-            <h3 class="list__heading">Þægilegt í amstri dagsins</h3>
-              <p class="list__text">
-                Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
-              </p>
-          </div>
-        </div>
+            <div class="list__item">
+              <div class="list__content">
+                <img src="img/check.svg" class="list__img" alt="">
+                <h3 class="list__heading">Ódýr og góð þjónusta</h3>
+                  <p class="list__text">
+                    Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+                  </p>
+              </div>
+            </div>
 
-        <div class="list">
-          <div class="list__content">
-            <img src="img/check.svg" class="list__img" alt="">
-            <h3 class="list__heading">Nauðsynlegt á hvert heimili</h3>
-              <p class="list__text">
-                Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
-              </p>
-          </div>
-        </div>
+            <div class="list__item">
+              <div class="list__content">
+                <img src="img/check.svg" class="list__img" alt="">
+                <h3 class="list__heading">Þægilegt í amstri dagsins</h3>
+                  <p class="list__text">
+                    Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+                  </p>
+              </div>
+            </div>
 
-        <div class="list">
-          <div class="col col-6">
-            <img src="img/image.jpg" class="img" alt="">
+            <div class="list__item">
+              <div class="list__content">
+                <img src="img/check.svg" class="list__img" alt="">
+                <h3 class="list__heading">Nauðsynlegt á hvert heimili</h3>
+                  <p class="list__text">
+                    Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+                  </p>
+              </div>
+            </div>
+
+            <div class="list__item">
+              <div class="list__image">
+                <img src="img/image.jpg" class="list__img" alt="">
+              </div>
+            </div>
           </div>
         </div>
       </section>
