header og bar scss og html

--- a/form.html
+++ b/form.html
@@ -11,15 +11,17 @@
   <link rel="stylesheet" href="grid.css">
 </head>
 <header class = "header header--two">
-  <form class="button" action="index.html">
-    <input type="submit" value="Foobar">
-  </form>
-  <form class="button" action="um.html">
-    <input type="submit" value="Um">
-  </form>
-  <form class="button" action="form.html">
-    <input type="submit" value="Kaupa">
-  </form>
+  <div class = "bar">
+    <form  class="button" action="index.html">
+      <input class="button button--one" type="submit" value="Fooþjónustan">
+    </form>
+    <form class="button" action="um.html">
+      <input class="button button--two" type="submit" value="Um">
+    </form>
+    <form class="button" action="form.html">
+      <input class="button button--three" type="submit" value="Kaupa">
+    </form>
+  </div>
   <div class="content">
     <h1 class="heading heading--one">Kaupa</h2>
   </div>
@@ -104,7 +106,9 @@
       </div>
     </section>
   </form>
-  <button class="button">Pannta</button>
+  <div>
+  <button class="button">Panta</button>
+  </div>
 </body>
 <footer>
   <p>Foothjonustan</p>
