--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   </head>
   <body>
     <header class="header header--one">
-      <form class="button" action="index.html">
-        <input type="submit" value="Foobar">
-      </form>
-      <form class="button" action="um.html">
-        <input type="submit" value="Um">
-      </form>
-      <form class="button" action="form.html">
-        <input type="submit" value="Kaupa">
-      </form>
-    <div class="content">
-      <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
-      <h1 class="heading heading--one">Fooþjónustan</h2>
-      <button class="button">Kaupa</button>
-    </div>
+      <div class = "bar">
+        <form  class="button" action="index.html">
+          <input class="button button--one" type="submit" value="Fooþjónustan">
+        </form>
+        <form class="button" action="um.html">
+          <input class="button button--two" type="submit" value="Um">
+        </form>
+        <form class="button" action="form.html">
+          <input class="button button--three" type="submit" value="Kaupa">
+        </form>
+      </div>
+      <div class="content">
+        <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
+        <h1 class="heading heading--one">Fooþjónustan</h2>
+        <button class="button">Kaupa</button>
+      </div>
     </header>
     <main>
       <section>
