form, html&scss mini done

--- a/form.html
+++ b/form.html
@@ -23,44 +23,43 @@
     </form>
   </div>
   <div class="content">
-    <h1 class="heading heading--one">Kaupa</h2>
+    <h2 class="heading heading--one">Kaupa</h2>
   </div>
 </header>
 <body>
-  <form class="form">
-    <section class="form__section section">
-      <div class="section__items">
-        <h2 class="items__item heading heading--two">Persónuupplýsingar</h2>
-        <label for="text">Nafn:</label><br>
-        <input class="items__item" type="text" required><br>
-        <label for="text">Kennitala:</label><br>
-        <input class="items__item" type="text" required placeholder="123456-7890"><br>
-        <label for="radio">Kyn:</label><br>
-        <input class="items__item" type="radio" name="Kyn" value="1">Kona<br>
-        <input class="items__item" type="radio" name="Kyn" value="2">Karl<br>
-        <input class="items__item" type="radio" name="Kyn" value="3">Annað<br>
-        <label for="tel">Sími:</label><br>
-        <input class="items__item" type="tel" required placeholder="+354 812 3456"><br>
-        <label for="text">Heimilisfang:</label><br>
-        <input class="items__item" type="text" required><br>
-        <input class="items__item" type="checkbox" checked> Skrá mig á póstlista
-      </div>
-    </section>
-    <section class="form__section section">
-      <div class="section__items">
-        <h2 class="heading heading--two">Greiðsluupplýsingar</h2>
-        <label for="select">Greiða með:</label><br>
-        <select class="items__item" >
-          <option value="Kreditkort">Kreditkorti</option>
-          <option value="Millifærsla">Millifærslu</option>
-          <option value="Reiðufé">Reiðufé</option>
-        </select><br>
-        <label for="text">Nafn á korti:</label><br>
-        <input class="items__item" type="text" required><br>
-        <label for="text">Kortanúmer:</label><br>
-        <input class="items__item" type="text" required placeholder="5999-9999-9999-9999"><br>
-        <label for="text">Mán</label>
-        <select class="items__item">
+  <main>
+    <form class="form">
+      <h2 class="heading heading--two">Persónuupplýsingar</h2>
+      <label for="text">Nafn:</label>
+      <input type="text" required><br>
+      <label for="text">Kennitala:</label>
+      <input type="text" required placeholder="123456-7890"><br>
+      <label for="radio">Kyn:</label>
+      <input type="radio" name="Kyn" value="1">Kona
+      <input type="radio" name="Kyn" value="2">Karl
+      <input type="radio" name="Kyn" value="3">Annað
+      <label for="tel">Sími:</label>
+      <input type="tel" required placeholder="+354 812 3456"><br>
+      <label for="text">Heimilisfang:</label>
+      <input type="text" required><br>
+      <input type="checkbox" checked> Skrá mig á póstlista
+    </form>
+    <form class="form">
+      <h2 class="heading heading--two">Greiðsluupplýsingar</h2>
+      <label for="select">Greiða með:</label>
+      <select>
+        <option value="Kreditkort">Kreditkorti</option>
+        <option value="Millifærsla">Millifærslu</option>
+        <option value="Reiðufé">Reiðufé</option>
+      </select><br>
+      <label for="text">Nafn á korti:</label>
+      <input type="text" required><br>
+      <label for="text">Kortanúmer:</label>
+      <input type="text" required placeholder="5999-9999-9999-9999"><br>
+      <p>Gildistími:</p>
+      <div class="date">
+        <label class="labels" for="select">Mán</label>
+        <select class="items">
           <option value="1">01</option>
           <option value="2">02</option>
           <option value="3">03</option>
@@ -74,18 +73,18 @@
           <option value="11">11</option>
           <option value="12">12</option>
         </select>
-        <label for="text">Ár</label>
-        <select class="items__item">
+        <label class="labels" for="select">Ár</label>
+        <select class="items">
           <option value="2017">1</option>
           <option value="2018">2</option>
           <option value="2019">3</option>
           <option value="2020">4</option>
-        </select><br>
+        </select>
       </div>
-    </section>
-  </form>
-  <div>
-  <button class="button">Panta</button>
+    </form>
+  </main>
+  <div class="button">
+    <button class="button--one">Panta</button>
   </div>
 </body>
 <footer>
