--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Forsíða</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab|Roboto:700" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styleguide.css">
     <link rel="stylesheet" href="grid.css">
@@ -28,43 +28,50 @@
     <main>
       <section>
         <div class="list">
-          <div class="list__col">
+          <div class="list__row">
 
-            <div class="list__item">
-              <div class="list__content">
-                <img src="img/check.svg" class="list__img" alt="">
-                <h3 class="list__heading">Ódýr og góð þjónusta</h3>
-                  <p class="list__text">
-                    Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
-                  </p>
+            <div class="col col-6">
+              <div class="list__col">
+                <div class="item">
+                  <img src="img/check.svg" class="item__img" alt="">
+                    <div class="item__content">
+                      <h3 class="item__heading">Ódýr og góð þjónusta</h3>
+                        <p class="item__text">
+                          Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+                        </p>
+                    </div>
+                </div>
+              </div>
+
+              <div class="list__col">
+                <div class="item">
+                  <img src="img/check.svg" class="item__img" alt="">
+                    <div class="item__content">
+                      <h3 class="item__heading">Þægilegt í amstri dagsins</h3>
+                        <p class="item__text">
+                          Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+                        </p>
+                    </div>
+                </div>
+              </div>
+
+              <div class="list__col">
+                <div class="item">
+                  <div class="item__content">
+                    <img src="img/check.svg" class="item__img" alt="">
+                      <h3 class="item__heading">Nauðsynlegt á hvert heimili</h3>
+                        <p class="item__text">
+                          Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+                        </p>
+                  </div>
+                </div>
               </div>
             </div>
 
-            <div class="list__item">
-              <div class="list__content">
-                <img src="img/check.svg" class="list__img" alt="">
-                <h3 class="list__heading">Þægilegt í amstri dagsins</h3>
-                  <p class="list__text">
-                    Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
-                  </p>
-              </div>
+            <div class="col col-6">
+              <img src="img/image.jpg" alt="">
             </div>
 
-            <div class="list__item">
-              <div class="list__content">
-                <img src="img/check.svg" class="list__img" alt="">
-                <h3 class="list__heading">Nauðsynlegt á hvert heimili</h3>
-                  <p class="list__text">
-                    Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
-                  </p>
-              </div>
-            </div>
-
-            <div class="list__item">
-              <div class="list__image">
-                <img src="img/image.jpg" class="list__img" alt="">
-              </div>
-            </div>
           </div>
         </div>
       </section>
