--- a/form.html
+++ b/form.html
@@ -84,7 +84,7 @@
     </form>
   </main>
   <div class="button">
-    <button class="button--one">Panta</button>
+    <button class="button button--one">Panta</button>
   </div>
 </body>
 <footer>
