--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       <div class="content">
         <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
         <h1 class="heading heading--one">Fooþjónustan</h2>
-        <button class="button">Kaupa</button>
+        <div>
+          <form  class= "button" action="form.html">
+            <input class="button button--three" type="submit" value="Kaupa">
+          </form>
+        </div>
       </div>
     </header>
     <main>
@@ -115,9 +119,11 @@
 
       <section>
         <h3 class="heading heading--three">Eftir hverju ert þú að bíða?</h3>
-        <form class="button" action="form.html">
-          <input type="submit" value="Kaupa">
-        </form>
+        <div>
+          <form  class= "button" action="form.html">
+            <input class="button button--three" type="submit" value="Kaupa">
+          </form>
+        </div>
       </section>
     </main>
     <footer>
