hefðbundnir takkar tilbúnir

--- a/form.html
+++ b/form.html
@@ -85,7 +85,7 @@
       </div>
     </form><br>
   </main>
-  <div class="button">
+  <div class = "container">
     <button class="button button--one">Panta</button>
   </div>
 </body>
