--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
         <h1 class="heading heading--one">Fooþjónustan</h2>
         <div>
-          <form  class= "button" action="form.html">
+          <form  class = "container" action="form.html">
             <input class="button button--three" type="submit" value="Kaupa">
           </form>
         </div>
@@ -132,8 +132,8 @@
       <section>
         <h3 class="heading heading--three">Eftir hverju ert þú að bíða?</h3>
         <div>
-          <form  class= "button" action="form.html">
-            <input class="button button--three" type="submit" value="Kaupa">
+          <form  class = "container" action="form.html">
+            <input class="button button--two" type="submit" value="Kaupa">
           </form>
         </div>
       </section>
