alls konar git add ./Users/asdiserla/Downloads/Adobe\ Photoshop\ CS5\ Extended\ 12.0\ Final\ For\ MAC\ \[x.86\ \&\ x.64\]\[WwW.ZoNaTorrent.CoM\]\]/Keymaker/KeyMaker ; exit;

--- a/index.html
+++ b/index.html
@@ -10,71 +10,61 @@
   </head>
   <body>
     <header class="header header--one">
-      <div class = "bar">
-        <form  class="button" action="index.html">
-          <input class="button button--one" type="submit" value="Fooþjónustan">
-        </form>
-        <form class="button" action="um.html">
-          <input class="button button--two" type="submit" value="Um">
-        </form>
-        <form class="button" action="form.html">
-          <input class="button button--three" type="submit" value="Kaupa">
-        </form>
-      </div>
-      <div class="content">
-        <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
-        <h1 class="heading heading--one">Fooþjónustan</h2>
-        <button class="button">Kaupa</button>
-      </div>
+      <form class="button" action="index.html">
+        <input type="submit" value="Foobar">
+      </form>
+      <form class="button" action="um.html">
+        <input type="submit" value="Um">
+      </form>
+      <form class="button" action="form.html">
+        <input type="submit" value="Kaupa">
+      </form>
+    <div class="content">
+      <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
+      <h1 class="heading heading--one">Fooþjónustan</h2>
+      <button class="button">Kaupa</button>
+    </div>
     </header>
     <main>
       <section>
-        <div class="list">
-          <div class="list__row">
+        <div class="row">
 
-            <div class="col col-6">
-              <div class="list__col">
-                <div class="item">
-                  <img src="img/check.svg" class="item__img" alt="">
-                    <div class="item__content">
-                      <h3 class="item__heading">Ódýr og góð þjónusta</h3>
-                        <p class="item__text">
-                          Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
-                        </p>
-                    </div>
+          <div class="col col-6 col-sm-12">
+            <div class="item">
+              <img src="img/check.svg" class="item__img" alt="">
+                <div class="item__content">
+                  <h3 class="item__heading">Ódýr og góð þjónusta</h3>
+                    <p class="item__text">
+                      Gerir nákvæmlega það sem þú býst við. Ekki láta þessa frábæru nýjung framhjá þér fara.
+                    </p>
                 </div>
-              </div>
-
-              <div class="list__col">
-                <div class="item">
-                  <img src="img/check.svg" class="item__img" alt="">
-                    <div class="item__content">
-                      <h3 class="item__heading">Þægilegt í amstri dagsins</h3>
-                        <p class="item__text">
-                          Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
-                        </p>
-                    </div>
-                </div>
-              </div>
-
-              <div class="list__col">
-                <div class="item">
-                  <div class="item__content">
-                    <img src="img/check.svg" class="item__img" alt="">
-                      <h3 class="item__heading">Nauðsynlegt á hvert heimili</h3>
-                        <p class="item__text">
-                          Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
-                        </p>
-                  </div>
-                </div>
-              </div>
             </div>
 
-            <div class="col col-6">
-              <img src="img/image.jpg" alt="">
+            <div class="item">
+              <img src="img/check.svg" class="item__img" alt="">
+                <div class="item__content">
+                  <h3 class="item__heading">Þægilegt í amstri dagsins</h3>
+                    <p class="item__text">
+                      Eftir nokkra daga munt þú aldrei geta verið án Fooþjónustunnar.
+                    </p>
+                </div>
             </div>
 
+            <div class="item">
+              <img src="img/check.svg" class="item__img" alt="">
+                <div class="item__content">
+                  <h3 class="item__heading">Nauðsynlegt á hvert heimili</h3>
+                    <p class="item__text">
+                      Hvort sem er fyrir einstaklinga eða stórfjölskyldur.
+                    </p>
+                </div>
+            </div>
           </div>
+
+          <div class="col col-6 col-sm-12">
+            <img src="img/image.jpg" alt="">
+          </div>
+
         </div>
       </section>
 
@@ -127,7 +117,7 @@
 
       <section>
         <h3 class="heading heading--three">Eftir hverju ert þú að bíða?</h3>
-        <form class="button" action="form.html">
+        <form class="button button--one" action="form.html">
           <input type="submit" value="Kaupa">
         </form>
       </section>
