more form, html&scss

--- a/form.html
+++ b/form.html
@@ -29,7 +29,7 @@
 <body>
   <main>
     <div class="row">
-      <div class="col col-4 col-sm-6">
+      <div class="col col-4 col-sm-6 col-smm-12">
         <form class="form form--one">
           <h2 class="heading heading--two">Persónuupplýsingar</h2>
           <label for="text">Nafn:</label>
@@ -51,7 +51,7 @@
           </div>
         </form>
       </div>
-      <div class="col col-4 col-sm-6">
+      <div class="col col-4 col-sm-6 col-smm-12">
         <form class="form form--two">
           <h2 class="heading heading--two">Greiðsluupplýsingar</h2>
           <label for="select">Greiða með:</label>
