unnið í bar og tökkum

--- a/form.html
+++ b/form.html
@@ -11,16 +11,15 @@
   <link rel="stylesheet" href="grid.css">
 </head>
 <header class = "header header--two">
-  <div class = "bar">
-    <form  class="button" action="index.html">
-      <input class="button button--one" type="submit" value="Fooþjónustan">
-    </form>
-    <form class="button" action="um.html">
-      <input class="button button--two" type="submit" value="Um">
-    </form>
-    <form class="button" action="form.html">
-      <input class="button button--three" type="submit" value="Kaupa">
-    </form>
+  <nav>
+    <div>
+      <ul class="bar bar--content">
+        <li class="bar bar--one"><a href="index.html">Fooþjónustan</a></li>
+        <li class="bar bar--two"><a href="um.html">Um</a></li>
+        <li class="bar bar--three"><a href="form.html">Kaupa</a></li>
+      </ul>
+    </div>
+  </nav>
   </div>
   <div class="content">
     <h2 class="heading heading--one">Kaupa</h2>
