--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
   </head>
   <body>
     <header class="header header--one">
-      <div class = "bar">
-        <form  class="button" action="index.html">
-          <input class="button button--one" type="submit" value="Fooþjónustan">
-        </form>
-        <form class="button" action="um.html">
-          <input class="button button--two" type="submit" value="Um">
-        </form>
-        <form class="button" action="form.html">
-          <input class="button button--three" type="submit" value="Kaupa">
-        </form>
-      </div>
+      <nav>
+        <div>
+          <ul class="bar bar--content">
+            <li class="bar bar--one"><a href="index.html">Fooþjónustan</a></li>
+            <li class="bar bar--two"><a href="um.html">Um</a></li>
+            <li class="bar bar--three"><a href="form.html">Kaupa</a></li>
+          </ul>
+        </div>
+      </nav>
       <div class="content">
         <h2 class="heading heading--two">Í fyrsta skipti á Íslandi</h2>
         <h1 class="heading heading--one">Fooþjónustan</h2>
