--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
   <title>
     Form
   </title>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab:400,700" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="styleguide.css">
   <link rel="stylesheet" href="grid.css">
