--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
           <label for="text">Heimilisfang:</label>
           <input class="boxes" type="text" required><br>
           <div>
-            <input type="checkbox" checked> Skrá mig á póstlista
+            <input type="checkbox" checked> Skrá mig á póstlista </input>
           </div>
         </form>
       </div>
