--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
   <body>
     <header class="header header--one">
       <nav>
-        <div>
+        <div class = "bar">
           <ul class="bar bar--content">
-            <li class="bar bar--one"><a href="index.html">Fooþjónustan</a></li>
-            <li class="bar bar--two"><a href="um.html">Um</a></li>
-            <li class="bar bar--three"><a href="form.html">Kaupa</a></li>
+            <div class= "container--one">
+              <li class="bar bar--one"><a href="index.html">Fooþjónustan</a></li>
+            </div>
+            <div class= "container--two">
+              <li class="bar bar--two"><a href="um.html">Um</a></li>
+              <li class="bar bar--three"><a href="form.html">Kaupa</a></li>
+            </div>
           </ul>
         </div>
       </nav>
