--- a/um.html
+++ b/um.html
@@ -16,10 +16,10 @@
   <nav>
     <div class = "bar">
       <ul class="bar bar--content">
-        <div class= "prufa--one">
+        <div class= "container--one">
           <li class="bar bar--one"><a href="index.html">Fooþjónustan</a></li>
         </div>
-        <div class= "prufa--two">
+        <div class= "container--two">
           <li class="bar bar--two"><a href="um.html">Um</a></li>
           <li class="bar bar--three"><a href="form.html">Kaupa</a></li>
         </div>
